tests/negative/ubsan_fail.cpp
// *******************************************************************************
// Copyright (c) 2026 Contributors to the Eclipse Foundation
//
// See the NOTICE file(s) distributed with this work for additional
// information regarding copyright ownership.
//
// This program and the accompanying materials are made available under the
// terms of the Apache License Version 2.0 which is available at
// https://www.apache.org/licenses/LICENSE-2.0
//
// SPDX-License-Identifier: Apache-2.0
// *******************************************************************************

#include <limits>

int main() {
    int max = std::numeric_limits<int>::max();
    // Intentional overflow - UBSan should detect this
    int overflow = max + 1;
    return overflow;
}
